syntax = "proto3";

option csharp_namespace = "CodemerxDecompile.Service";

service RpcDecompiler {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
